# docsfinder

./: .gitattributes  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: all_query.json  cisi_data.json  cisi_query.json  cran_data.json  cran_query.json
docsfinder/: __main__.py  dependencies.py  main.py
docsfinder/api/v1/: main.py
docsfinder/core/: document.py  engine.py  finder.py  full_document.py  indexed_document.py  indexer.py  model.py  models.py  query.py  tokenizer.py  vectorizer.py
save/: docs_and_terms.json  idf.npy
tests/: test_docsfinder.py
