[tool.poetry]
name = "docsfinder"
version = "0.0.1"
description = "Open source documents finder."
authors = ["CodeStrange <codestrangeofficial@gmail.com>"]
homepage = "https://github.com/docsfinder/docsfinder"
repository = "https://github.com/docsfinder/docsfinder"
documentation = "https://github.com/docsfinder/docsfinder"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
docsfinder = "docsfinder.main:typer_app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
fastapi = {extras = ["all"], version = "^0.64.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.5b0"
isort = "^5.8.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
