[tool.poetry]
name = "docsfinder"
version = "0.0.1"
description = "Open source documents finder."
authors = ["CodeStrange <codestrangeofficial@gmail.com>"]
homepage = "https://github.com/docsfinder/docsfinder"
repository = "https://github.com/docsfinder/docsfinder"
documentation = "https://github.com/docsfinder/docsfinder"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
docsfinder = "docsfinder.main:typer_app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
fastapi = {extras = ["all"], version = "^0.64.0"}
spacy = "^3.0.6"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm"}
gensim = "^4.0.1"
sklearn = "^0.0"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.5b0"
isort = "^5.8.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
