[tool.poetry]
name = "docsfinder"
version = "0.0.1"
description = "Open source documents finder."
authors = ["CodeStrange <codestrangeofficial@gmail.com>"]
homepage = "https://github.com/docsfinder/docsfinder"
repository = "https://github.com/docsfinder/docsfinder"
documentation = "https://github.com/docsfinder/docsfinder"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
docsfinder = "docsfinder.main:typer_app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
spacy = "^3.0.9"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm"}
nltk = "^3.8"
fastapi = {extras = ["all"], version = "^0.95.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
flake8 = "^5.0.4"
isort = "^5.12.0"
black = "^21.12b0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
